# rocket_fullstack_system_jwt_courses

./: Cargo.toml  Rocket.toml  db_clientes.sqlite  package-lock.json  readme.md  taiwlind.config.js
src/: main.rs
src/controllers/: courses.rs  home.rs  login.rs  mod.rs
src/models/: course.rs  mod.rs  user.rs
src/services/: auth.rs
src/static/: output.css
src/templates/: base.html.tera
src/templates/courses/: index.html.tera
src/templates/home/: index.html.tera
src/templates/login/: index.html.tera
src/views/: views.rs
