[package]
name = "rocket_reysofts_courses"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.36"
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
